--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="#">About The Boek</a></li>
             <li><a href="#">CSS Properties</a></li>
-            <li><a href="#">CSS Tips</a></li>
+            <li><a href="#">CSS Tips and tricks</a></li>
             <li><a href="#">CSS Gotchas</a></li>
             <li><a href="#">Contacteer ons</a></li>
           </ul>
