boek werd veranderd naar book

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
       <header>
         <nav class="clear">
           <ul>
-            <li><a href="#">About The Boek</a></li>
+            <li><a href="#">About The Book</a></li>
             <li><a href="#">CSS Properties</a></li>
             <li><a href="#">CSS Tips and tricks</a></li>
             <li><a href="#">CSS Gotchas</a></li>
