mnm's with neutjes

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">About The Boek</a></li>
             <li><a href="#">CSS Properties</a></li>
             <li><a href="#">CSS Tips and tricks</a></li>
-            <li><a href="#">CSS Gotchas and nacho's mmmmmmmmm</a></li>
+            <li><a href="#">CSS Gotchas and mnm's it is</a></li>
             <li><a href="#">Contacteer ons</a></li>
           </ul>
         </nav>
